--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -319,15 +319,15 @@
                                         <div class="col-sm-12">
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
-                                                    <h4 asp-for="@(Model.OPENVAS.ServerIP)">Server IP</h4>
-                                                    <input class="form-control" asp-for="@(Model.OPENVAS.ServerIP)" />
+                                                    <h4 asp-for="@(Model.OPENVAS.ServerIPOpenvas)">Server IP</h4>
+                                                    <input class="form-control" asp-for="@(Model.OPENVAS.ServerIPOpenvas)" />
                                                 </div>
 
                                             </div>
                                             <div class="col-sm-7" style="margin:0 auto; float:none">
                                                 <div class="form-group row">
-                                                    <h4 asp-for="@(Model.OPENVAS.Porta)">Porta</h4>
-                                                    <input class="form-control" asp-for="@(Model.OPENVAS.Porta)" />
+                                                    <h4 asp-for="@(Model.OPENVAS.PortaOpenvas)">Porta</h4>
+                                                    <input class="form-control" asp-for="@(Model.OPENVAS.PortaOpenvas)" />
                                                 </div>
 
                                             </div>
