--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -1674,7 +1674,7 @@
                                         <div class="col-sm-1"></div>
                                         <div class="col-sm-6 text-right">
                                             <div class="form-group row">
-                                                <input type="submit" asp-action="Create" asp-route-cosa="wpscan" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
+                                                <input type="submit" asp-action="Create" asp-route-cosa="dnsrecon" class="btn btn-default" value="Crea" />&nbsp;&nbsp; |
                                                 <a asp-action="Index"> Torna alla lista</a>
                                             </div>
                                         </div>
