--- a/Views/Progetto/Index.cshtml
+++ b/Views/Progetto/Index.cshtml
@@ -33,7 +33,8 @@
                             
                             <td>
                                 <div class="col-sm-8 col-sm-offset-6">
-                                    <a asp-action="Edit" asp-route-id="@item.ID">Modifica </a>|
+                                    <a asp-action="Edit" asp-route-id="@item.ID">Modifica </a> |
+                                     <a asp-action="Run" asp-route-id="@item.ID"> Avvia scan</a> |
                                     <a asp-action="Delete" asp-route-id="@item.ID">Cancella </a>
                                 </div>
                             </td>
