--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -1202,7 +1202,7 @@
             </div>
         <div class="col-sm-6 col-sm-offset-6 text-right"><br>
                                         <div class="form-group">
-                                            <input type="submit" class="btn btn-default" value="Salva" />&nbsp;&nbsp;|
+                                            <input type="submit" class="btn btn-default" value="Salva" style="position:fixed;width:60px;height:60px;bottom:40px;right:150px;" />&nbsp;&nbsp;
                                             <a asp-action="Index"> Torna alla lista</a>
                                         </div>
                                     </div>
