Commentata una checkbox perché fa parte di una feature futura

--- a/Views/Report/Details.cshtml
+++ b/Views/Report/Details.cshtml
@@ -26,7 +26,7 @@ List<webmva.Models.PercorsiReport> lista = ViewBag.Lista; }
                     {
                         <tr>
                             <td>
-                               <input type="checkbox" value="@lista[i].ID" name="selezionati" />
+                               <!--<input type="checkbox" value="@lista[i].ID" name="selezionati" />-->
                             </td>
                             <td>
                               @Html.Raw(lista[i].Percorso)
